# -*- python -*-

load(
    "//tools:drake.bzl",
    "drake_cc_library",
    "drake_cc_binary",
    "drake_cc_googletest",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_cc_library(
    name = "albatross",
    srcs = ["albatross.cc"],
    hdrs = ["albatross.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//systems/framework:leaf_system",
        "//systems/framework:system_constraint",
        "//systems/framework:vector",
    ],
)

drake_cc_googletest(
    name = "albatross_test",
    deps = [
        ":albatross",
        "//systems/framework/test_utilities:scalar_conversion",
    ],
)

drake_cc_binary(
    name = "trajectory_optimization",
    srcs = ["trajectory_optimization.cc"],
    deps = [
        "albatross",
        "//systems/trajectory_optimization:direct_collocation",
    ],
)

add_lint_tests()
